force-app/main/default/objects/Model_Save_Log__c/Model_Save_Log__c.object-meta.xml
<CustomObject>
    <label>Model Save Log</label>
    <nameField>
        <label>Model Save Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Model Save Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>