force-app/main/default/objects/Model_Save_Log__c/fields/Model_Name__c.field-meta.xml
<CustomField>
    <fullName>Model_Name__c</fullName>
    <description>Name of the X-Author Model file name</description>
    <inlineHelpText>Name of the X-Author Model file name</inlineHelpText>
    <label>Model Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>