force-app/main/default/objects/Model_Save_Log__c/fields/Model_Type__c.field-meta.xml
<CustomField>
    <fullName>Model_Type__c</fullName>
    <label>Model Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Originations Model</fullName>
            </value>
            <value>
                <fullName>Term Underwriting Model</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>