force-app/main/default/objects/Model_Save_Log__c/fields/Save_Date__c.field-meta.xml
<CustomField>
    <fullName>Save_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Date that this model was saved in X-Author</description>
    <inlineHelpText>Date that this model was saved in X-Author</inlineHelpText>
    <label>Save Date</label>
    <type>DateTime</type>
</CustomField>